# juce-boy-advance

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Services/: InputService.h  VideoService.h
source/UI/: AudioConfigOverlay.h  BackButton.h  ConfigMenuButton.h  Font.h  HoverBracket.h  InputConfigOverlay.h  KeyMapButton.h  MenuButton.h  MenuLabel.h  PopupLook.h  ZoomMenuButton.h
source/adapters/: JuceAudioDevice.h  JuceVideoDevice.h  PluginAudioSampleSink.h  WorkerPpuRenderer.h
source/adapters/ppu_renderer/: Pipeline.cpp  Pipeline.h
source/macOS/: MacWindow.h  MacWindow.mm
source/services/: AudioService.h  EmulatorService.h  InputService.h  ThemeColors.h  UserSettings.h
